Fixed various styling issues
Fixed issue with header being too bold, and too small

Fixed issue with title not being caps

Fixed issue with some words in title being too skinny

--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,8 @@ body {
 	text-align: center;
 	padding: 0 0 50px 0;
 	margin: 0 !important;
-	font-weight: 600;
+	font-weight: 300;
+	font-size: 2.5rem;
 }
 
 .paddedheader {
@@ -143,7 +144,7 @@ i {
 
 /* Helper Classes */
 
-.caps * {
+.caps {
 	text-transform: uppercase;
 }
 
@@ -243,7 +244,7 @@ i {
 
 #title {
 	line-height: 1;
-	font-weight: 300;
+	/*font-weight: 300;*/
 }
 
 #homeNav {
